--- a/EconomySimulator2/MainWindow.xaml
+++ b/EconomySimulator2/MainWindow.xaml
@@ -5,6 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EconomySimulator2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="550" Width="800" Source="PageMap.xaml">
+        Title="MainWindow" Height="530" Width="800" Source="pages/PageMap.xaml">
 
 </NavigationWindow>
