--- a/EconomySimulator2/pages/PageGraph.xaml
+++ b/EconomySimulator2/pages/PageGraph.xaml
@@ -14,7 +14,7 @@
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <Button Grid.Row="1" Click="Button_Click">戻る</Button>
-        <StackPanel Orientation="Horizontal" Margin="567,10,10,346" Panel.ZIndex="2">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="3,100,50,0" Panel.ZIndex="2">
             <ComboBox x:Name="MyComboBox"
               Height="30"
               Width="200"
